make favorites hover operate correctly on IE and Chrome

--- a/bundles/org.eclipse.orion.client.core/static/ide.css
+++ b/bundles/org.eclipse.orion.client.core/static/ide.css
@@ -221,6 +221,10 @@ h2 {
 	min-width: 600px;
 }
 
+.favoritesTable {
+	border-spacing: 0px;
+}
+
 .secondaryColumn {
 	color: #666666;	
 }
